--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
 
   <body>
-	  Hello world !
+	  <ul>
+		  <li><a href="https://gpx.tomacla.info">A simple GPX Viewer</a></li>  
+		  <li><a href="https://www.biketeam.info">Biketeam project</a></li>
+		  <li><a href="https://demo.biketeam.info">Biketeam demo</a></li>
+	  </ul>
   </body>
 </html>
