--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		  <li><a href="https://gpx.tomacla.info">A simple GPX Viewer</a></li>  
 		  <li><a href="https://www.biketeam.info">Biketeam project</a></li>
 		  <li><a href="https://demo.biketeam.info">Biketeam demo</a></li>
+		  <li><a href="https://maps.tomacla.info">Promenades autour de Rezé</a></li>
 	  </ul>
   </body>
 </html>
