--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	  <ul>
 		  <li><a href="https://gpx.tomacla.info">A simple GPX Viewer</a></li>  
 		  <li><a href="https://www.biketeam.info">Biketeam project</a></li>
+      <li><a href="https://tomacla.info/rezekids">Walking paths for kids near Rezé</a></li>  
 	  </ul>
   </body>
 </html>
