--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 <link rel="icon" href="/favicon.png" >
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.3b1973e152c16c0c8c6d4df29d4991624ba0bacb22053b0f72bcca5ce547852a.js" integrity="sha256-Oxlz4VLBbAyMbU3ynUmRYkugussiBTsPcrzKXOVHhSo=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.e1de1977c4515daed9ceec8ebe7c789772621e65c2d49b7dc33f68f8bc18e1da.js" integrity="sha256-4d4Zd8RRXa7ZzuyOvnx4l3JiHmXC1Jt9wz9o&#43;LwY4do=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
